<resources>
    <string name="app_name">mvvm</string>
    <string name="cheap">Cheap</string>
    <string name="fast">Fast</string>
    <string name="stable">Stable</string>
    <string name="expensive">Expensive</string>
    <string name="slow">Slow</string>
    <string name="buggy">Buggy</string>
    <string name="create">Create!</string>
    <string name="possible">possible</string>
    <string name="impossible">impossible</string>
    <string name="estimation">The project %1$s is %2$s to implement</string>
    <string name="description">%1$s, %2$s and %3$s</string>
    <string name="project_name">Project name</string>
    <string name="additional_info">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</string>
</resources>
